some mobile fixes

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 			<div class="column sm-gap mc-expandable">
 				<span class="lg-text heading text-center">HOURS</span>
 
-				<div class="card row sm-gap">
-					<span class="sm-text hw-expandable">From noon till midnight, our doors are open, ready to serve you and your party! Join us here at GDG at our listed hours, where the action on the field meets the sizzle on our grills.</span>
+				<div class="card row sm-gap x-center text-center">
+					<!-- <span class="sm-text hw-expandable">From noon till midnight, our doors are open, ready to serve you and your party! Join us here at GDG at our listed hours, where the action on the field meets the sizzle on our grills.</span> -->
 					<div class="content-container hw-expandable">
 						<span class="md-text">HOURS OF OPERATION:</span>
 						<span class="sm-text">Mon - Fri: 12:00PM - 12:00AM</span>
@@ -164,7 +164,7 @@
 							finish the challenge, you'll receive a t-shirt, $15 gift certificate and
 							bragging rights as the wing champion.
 						</span>
-						<a href="reservations.html" class="button">MAKE A RESERVATION</a>
+						<!-- <a href="reservations.html" class="button">MAKE A RESERVATION</a> -->
 					</div>
 				</div>
 
@@ -181,7 +181,7 @@
 							cheer on local talent. It's a night of unforgettable performances
 							and free drinks for all performers.
 						</span>
-						<a href="reservations.html" class="button">MAKE A RESERVATION</a>
+						<!-- <a href="reservations.html" class="button">MAKE A RESERVATION</a> -->
 					</div>
 				</div>
 			</div>
